Double audio output fix.

--- a/aac-ionic/scss/ionic.app.scss
+++ b/aac-ionic/scss/ionic.app.scss
@@ -983,5 +983,13 @@ input[type="text"]:focus, textarea:focus{
   float: left;
 }
 
+.pull-right{
+  float: left;
+}
+
+.pull-none{
+  float: none;
+}
+
 // Include all of Ionic
 @import "www/lib/ionic/scss/ionic";
