--- a/aac-ionic/www/templates/settings.html
+++ b/aac-ionic/www/templates/settings.html
@@ -1,5 +1,5 @@
 <ion-header-bar class="bar-dark">
-  <div class="buttonsdiv">
+  <div class="buttonsdiv text-center">
     <!--<i class="icon ion-unlocked"></i>-->
     <!-- <i class="icon ion-locked"></i> -->
     <button class="button button-outline button-calm button-small" id="selected-btn">
@@ -16,7 +16,7 @@
       <i class="icon ion-eye-disabled"></i><span class="hide-label">Hide Tiles</span>
     </button>
 
-    <button class="done-button"><p><i class="icon ion-checkmark-round"></i><a href="#/home">DONE</a></p></div>
+    <button class="done-button pull-none" ng-click="settingsToMain();"><p><i class="icon ion-checkmark-round"></i>DONE</p></button></div>
   </div>
 </ion-header-bar>
 
