--- a/aac-ionic/scss/style.scss
+++ b/aac-ionic/scss/style.scss
@@ -72,7 +72,7 @@ i.fa {
     width: 135px;
     float: left;
     text-align: center;
-    margin: 0px auto 10px 17%;
+    margin: -36% -3% 50% 15%;
 }
 
 
