--- a/aac-ionic/scss/ionic.app.scss
+++ b/aac-ionic/scss/ionic.app.scss
@@ -772,7 +772,7 @@ input[type="text"]:focus, textarea:focus{
 .settings-box{
   background-color: $white;
   margin: 5% 15%;
-  padding: 27.7% 0px;
+  padding: 27.7% 0;
   font-size: 1.2em;
   width:70%;
 }
