--- a/aac-ionic/www/css/ionic.app.css
+++ b/aac-ionic/www/css/ionic.app.css
@@ -596,7 +596,7 @@ input[type="text"]:focus, textarea:focus {
 .settings-box {
   background-color: #ffffff;
   margin: 5% 15%;
-  padding: 27.7% 0px;
+  padding: 27.7% 0;
   font-size: 1.2em;
   width: 70%; }
 
