Fixed the double click buttons bug and small css change..

--- a/aac-ionic/www/templates/aac-partials/_choose_buddie.html
+++ b/aac-ionic/www/templates/aac-partials/_choose_buddie.html
@@ -21,8 +21,8 @@
       </div>
 
       <div style="clear:both;"></div>
-      <div class="round-button2" ng-click="cancelBuddySelect();" style="margin: 0 auto; !important; float: none !important;">
-        Cancel
+      <div class="round-button2 cancel" ng-click="cancelBuddySelect();" style="margin: 0 auto; !important; float: none !important;">
+         <i class="fa fa-times" aria-hidden="true"></i> Cancel
       </div>
     </div>
   </ion-content>
