--- a/aac-ionic/www/templates/main.html
+++ b/aac-ionic/www/templates/main.html
@@ -201,7 +201,7 @@
         </div>
 
         <div class="col col-60">
-          <div class="button-circle pull-left text-center" on-double-tap="handlerTap('bell');" ng-class="{'inactive': buttons.bell}" ng-click="bellSound()" ng-dblclick="return false">
+          <div class="button-circle pull-left text-center" on-double-tap="handlerTap('bell');" ng-class="{'inactive': buttons.bell}" ng-click="bellSound()">
             <img src="img/new_dev_assets/bell.png" />
           </div>
 
