Added pronoun color

--- a/aac-ionic/scss/ionic.app.scss
+++ b/aac-ionic/scss/ionic.app.scss
@@ -848,7 +848,7 @@ input[type="text"]:focus, textarea:focus{
 }
 
 .tile.lightYellow {
-  /*background-color: $speak-agent-light-yellow;*/
+  background-color: $speak-agent-light-yellow;
   border-color: $dark-grey }
 
  .boards {
