--- a/aac-ionic/www/templates/main.html
+++ b/aac-ionic/www/templates/main.html
@@ -33,7 +33,8 @@
     </div>
   </button>
 
-  <button class="done-button" ng-click="hideDone()" ng-if="hide"><p><i class="icon ion-checkmark-round"></i><a href="#/home">DONE</a></p>
+  <button class="done-button" ng-click="hideDone()" ng-if="hide">
+    <i class="icon ion-checkmark-round"><span>DONE</span></i>
   </button>
 </div>
 
