Fixed settings box css.

--- a/aac-ionic/scss/ionic.app.scss
+++ b/aac-ionic/scss/ionic.app.scss
@@ -772,9 +772,10 @@ input[type="text"]:focus, textarea:focus{
 .settings-box{
   background-color: $white;
   margin: 5% 15%;
-  padding: 27.7% 0;
+  padding: 2.7% 18px;
   font-size: 1.2em;
   width:70%;
+  overflow: auto;
 }
 
 .settings-box.ion-checkbox{
