--- a/aac-ionic/www/css/ionic.app.css
+++ b/aac-ionic/www/css/ionic.app.css
@@ -596,9 +596,10 @@ input[type="text"]:focus, textarea:focus {
 .settings-box {
   background-color: #ffffff;
   margin: 5% 15%;
-  padding: 27.7% 0;
+  padding: 2.7% 18px;
   font-size: 1.2em;
-  width: 70%; }
+  width: 70%;
+  overflow: auto; }
 
 .settings-box.ion-checkbox {
   border-color: #000000; }
