--- a/aac-ionic/scss/style.scss
+++ b/aac-ionic/scss/style.scss
@@ -262,8 +262,8 @@ i.icon.ion-eye-disabled, .hide-label {
     color: #bfbfbf;
 }
 
-.done-button i:active {
-    color: white;
+button.done-button:active i {
+    color: white !important;
 }
 
 .done-button span {
