--- a/aac-ionic/www/templates/main.html
+++ b/aac-ionic/www/templates/main.html
@@ -65,7 +65,7 @@
 
           <div class="regulars" ng-class="{'hide-tile': quickbar.lexeme.hidden}">
             <div ng-show="!quickbar.lexeme.hidden" ng-click="quickBarTile(quickbar.lexeme);">
-              {{ quickbar.lexeme.word.root_word | limitTo: titleLimit }}
+              {{ quickbar.lexeme.lexeme | limitTo: titleLimit }}
               <br />
               <img  ng-src="{{quickbar.lexeme.symbol.image | localImage }}" ng-if="quickbar.lexeme.symbol.image" style="width:40px;height:40px">
             </div>
@@ -73,7 +73,7 @@
 
           <div class="regulars" ng-class="{'hide-tile': quickbar.lexeme2.hidden}">
             <div ng-show="!quickbar.lexeme2.hidden" ng-click="quickBarTile(quickbar.lexeme2);">
-              {{ quickbar.lexeme2.word.root_word | limitTo: titleLimit }}
+              {{ quickbar.lexeme2.lexeme | limitTo: titleLimit }}
               <br />
               <img ng-src="{{quickbar.lexeme2.symbol.image | localImage }}" ng-if="quickbar.lexeme2.symbol.image" style="width:40px;height:40px">
             </div>
@@ -81,7 +81,7 @@
 
           <div class="regulars" ng-class="{'hide-tile': quickbar.lexeme3.hidden}">
             <div ng-show="!quickbar.lexeme3.hidden" ng-click="quickBarTile(quickbar.lexeme3);">
-              {{ quickbar.lexeme3.word.root_word | limitTo: titleLimit }}
+              {{ quickbar.lexeme3.lexeme | limitTo: titleLimit }}
               <br />
               <img ng-src = "{{quickbar.lexeme3.symbol.image | localImage }}" ng-if="quickbar.lexeme3.symbol.image" style="width:40px;height:40px">
             </div>
@@ -89,7 +89,7 @@
 
           <div class="regulars" ng-class="{'hide-tile': quickbar.lexeme4.hidden}">
             <div ng-show="!quickbar.lexeme4.hidden" ng-click="quickBarTile(quickbar.lexeme4);">
-              {{ quickbar.lexeme4.word.root_word | limitTo: titleLimit }}
+              {{ quickbar.lexeme4.lexeme | limitTo: titleLimit }}
               <img ng-src="{{quickbar.lexeme4.symbol.image | localImage }}" ng-if="quickbar.lexeme4.symbol.image" style="width:40px;height:40px">
             </div>
           </div>
