Finished AAC punchlist (chat buddy male or female voice, default male voice, target board add word to word builder.

--- a/aac-ionic/www/templates/settings.html
+++ b/aac-ionic/www/templates/settings.html
@@ -184,13 +184,13 @@
 		</ion-list>
 		<div ng-include src="'templates/message.html'"></div>
 
-		<div class="settings-box">
+		<!--<div class="settings-box">
 			<p>Synthetic Voices</p>
 			<ion-list>
 				<ion-radio type="radio" style="border-color:white;" ng-model="user.userinfo.synthetic_voice" value="FEMALE"><span class="checkbox-text">Female</span><i class="icon ion-play"></i></ion-radio>
 				<ion-radio type="radio" style="border-color:white;" ng-model="user.userinfo.synthetic_voice" value="MALE"><span class="checkbox-text">Male</span><i class="icon ion-play"></i></ion-radio>
 			</ion-list>
-		</div>
+		</div>-->
 
 		<div class="settings-box">
 			<p>Voice Speed</p>
