--- a/aac-ionic/www/templates/main.html
+++ b/aac-ionic/www/templates/main.html
@@ -45,13 +45,7 @@
     <div class="row" id="regularRow">
       <div class="col col-10" id="regularRowBod">
 
-        <div ng-click="sayPhrase()" ng-show="!activeChat">
-          <img src="img/AAC_assets/avatar_default.png"/>
-          <img src="img/AAC_assets/play.png" alt="Play" class="play" ng-show="play">
-          <img src="img/AAC_assets/replay.png" alt="Play" class="replay" ng-show="replay">
-        </div>
-
-        <div ng-click="callBuddy()" ng-show="activeChat">
+        <div ng-click="activeChat? callBuddy() : sayPhrase()">
           <img src="img/AAC_assets/avatar_default.png"/>
           <img src="img/AAC_assets/play.png" alt="Play" class="play" ng-show="play">
           <img src="img/AAC_assets/replay.png" alt="Play" class="replay" ng-show="replay">
