Just missing image change

--- a/aac-ionic/www/templates/main.html
+++ b/aac-ionic/www/templates/main.html
@@ -45,7 +45,13 @@
     <div class="row" id="regularRow">
       <div class="col col-10" id="regularRowBod">
 
-        <div ng-click="activeChat? callBuddy() : sayPhrase()">
+        <div ng-if="!activeChat" ng-click="sayPhrase();">
+          <img src="img/AAC_assets/avatar_default.png"/>
+          <img src="img/AAC_assets/play.png" alt="Play" class="play" ng-show="play">
+          <img src="img/AAC_assets/replay.png" alt="Play" class="replay" ng-show="replay">
+        </div>
+
+        <div ng-if="activeChat" ng-click="sayPhrase();callBuddy();">
           <img src="img/AAC_assets/avatar_default.png"/>
           <img src="img/AAC_assets/play.png" alt="Play" class="play" ng-show="play">
           <img src="img/AAC_assets/replay.png" alt="Play" class="replay" ng-show="replay">
@@ -138,8 +144,8 @@
         </div>
 
         <img ng-src="{{ imageUrl }}" id="home-section" ng-click="deleteLastTile()" on-tap="onTap()"/>
-        <img ng-src="img/chat_buddies/{{selectedBuddy.think}}" style="float:right;margin-top:-17px;margin-right:-33%" ng-show="activeChat && !callEvent"/>
-        <img ng-src="img/chat_buddies/{{selectedBuddy.talk}}" style="float:right;margin-top:-17px;margin-right:-24%" ng-show="activeChat && callEvent"/>
+        <img ng-src="img/chat_buddies/{{selectedBuddy.talk}}" style="float:right;margin-top:-17px;margin-right:-24%" ng-show="activeChat && !callEvent"/>
+        <img ng-src="img/chat_buddies/{{selectedBuddy.think}}" style="float:right;margin-top:-17px;margin-right:-33%" ng-show="activeChat && callEvent"/>
       </div>
     </div>
 
