Added changing buddies functionality.

--- a/aac-ionic/scss/ionic.app.scss
+++ b/aac-ionic/scss/ionic.app.scss
@@ -479,6 +479,7 @@ button#btn-styling.button.button-outline.button-calm.button-small.selected-btn2{
 #home-section{
   float: right;
   margin-top:12px;
+  width: 73px;
 }
 
 #home-button-section{
