--- a/aac-ionic/www/templates/main.html
+++ b/aac-ionic/www/templates/main.html
@@ -142,10 +142,11 @@
           <p ng-bind="symbol.label? (symbol.label | charLimit: titleLimit) : (symbol.word | charLimit: titleLimit)" class="tile-words"></p>
           <img src="{{symbol.symbol.image | localImage }}" ng-if="symbol.symbol.image" style="width:40px;height:40px">
         </div>
-
         <img ng-src="{{ imageUrl }}" id="home-section" ng-click="deleteLastTile()" on-tap="onTap()"/>
-        <img ng-src="img/chat_buddies/{{selectedBuddy.talk}}" style="float:right;margin-top:-17px;margin-right:-24%" ng-show="activeChat && !callEvent"/>
-        <img ng-src="img/chat_buddies/{{selectedBuddy.think}}" style="float:right;margin-top:-17px;margin-right:-33%" ng-show="activeChat && callEvent"/>
+
+        <img ng-src="img/chat_buddies/{{selectedBuddy.gif}}" style="float:right;margin-top:-17px;margin-right:-24%;width:100px;" ng-show="activeChat && callEvent == 'normal'"/>
+        <img ng-src="img/chat_buddies/{{selectedBuddy.talk}}" style="float:right;margin-top:-17px;margin-right:-24%" ng-show="activeChat && callEvent == 'talk'"/>
+        <img ng-src="img/chat_buddies/{{selectedBuddy.think}}" style="float:right;margin-top:-17px;margin-right:-33%" ng-show="activeChat && callEvent == 'think'"/>
       </div>
     </div>
 
