--- a/aac-ionic/www/css/ionic.app.css
+++ b/aac-ionic/www/css/ionic.app.css
@@ -371,6 +371,18 @@ button#btn-styling.button.button-outline.button-calm.button-small.selected-btn2 
   margin-top: 12px;
   width: 73px; }
 
+.buddy-normal,
+.buddy-talking {
+  float: right;
+  margin-top: -17px;
+  margin-right: -24%;
+  width: 100px; }
+
+.buddy-thinking {
+  float: right;
+  margin-top: -17px;
+  margin-right: -33%; }
+
 #home-button-section {
   background: #ffffff;
   padding-left: 15px;
