--- a/aac-ionic/www/templates/main.html
+++ b/aac-ionic/www/templates/main.html
@@ -45,13 +45,7 @@
     <div class="row" id="regularRow">
       <div class="col col-10" id="regularRowBod">
 
-        <div ng-if="!activeChat" ng-click="sayPhrase();">
-          <img src="img/AAC_assets/avatar_default.png"/>
-          <img src="img/AAC_assets/play.png" alt="Play" class="play" ng-show="play">
-          <img src="img/AAC_assets/replay.png" alt="Play" class="replay" ng-show="replay">
-        </div>
-
-        <div ng-if="activeChat" ng-click="sayPhrase();callBuddy();">
+        <div ng-click="selectedTiles.length > 0? sayPhrase() : ''">
           <img src="img/AAC_assets/avatar_default.png"/>
           <img src="img/AAC_assets/play.png" alt="Play" class="play" ng-show="play">
           <img src="img/AAC_assets/replay.png" alt="Play" class="replay" ng-show="replay">
@@ -144,9 +138,9 @@
         </div>
         <img ng-src="{{ imageUrl }}" id="home-section" ng-click="deleteLastTile()" on-tap="onTap()"/>
 
-        <img ng-src="img/chat_buddies/{{selectedBuddy.gif}}" style="float:right;margin-top:-17px;margin-right:-24%;width:100px;" ng-show="activeChat && callEvent == 'normal'"/>
-        <img ng-src="img/chat_buddies/{{selectedBuddy.talk}}" style="float:right;margin-top:-17px;margin-right:-24%" ng-show="activeChat && callEvent == 'talk'"/>
-        <img ng-src="img/chat_buddies/{{selectedBuddy.think}}" style="float:right;margin-top:-17px;margin-right:-33%" ng-show="activeChat && callEvent == 'think'"/>
+        <img ng-src="img/chat_buddies/{{selectedBuddy.gif}}" class="buddy-normal" ng-show="activeChat && callEvent == 'normal'"/>
+        <img ng-src="img/chat_buddies/{{selectedBuddy.talk}}" class="buddy-talking" ng-show="activeChat && callEvent == 'talk'"/>
+        <img ng-src="img/chat_buddies/{{selectedBuddy.think}}" class="buddy-thinking" ng-show="activeChat && callEvent == 'think'"/>
       </div>
     </div>
 
