Moving us to prod~

--- a/aac-ionic/www/templates/login.html
+++ b/aac-ionic/www/templates/login.html
@@ -13,7 +13,8 @@
                         <form ng-submit="doLogin()">
                             <div class="list list-inset">
                                 <label class="item item-input login-label">
-                                    <input type="text" placeholder="Username" class="login-input" ng-model="loginData.username">
+                                    <input type="text" placeholder="Username" class="login-input" ng-model="loginData.username"
+                                    autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false">
                                 </label>
                                 <label class="item item-input">
                                     <input type="password" placeholder="Password" class="login-input" ng-model="loginData.password">
