track by and one way binding for settings and quickbar.

--- a/aac-ionic/www/templates/main.html
+++ b/aac-ionic/www/templates/main.html
@@ -51,7 +51,7 @@
           <img src="img/AAC_assets/replay.png" alt="Play" class="replay" ng-show="replay">
         </div>
 
-        <div class="regulars" ng-repeat="phrase in quickPhrases" ng-click="sayQuickPhrase(phrase)" ng-style="isQuickPhrasePressed(phrase) && {'background-color': '#FFE98E', 'border': '2px solid #F8D338'}">
+        <div class="regulars" ng-repeat="phrase in quickPhrases track by $index" ng-click="sayQuickPhrase(phrase)" ng-style="isQuickPhrasePressed(phrase) && {'background-color': '#FFE98E', 'border': '2px solid #F8D338'}">
           {{ phrase }}
         </div>
 
@@ -59,32 +59,32 @@
 
           <div class="regulars" ng-class="{'hide-tile': quickbar.lexeme.hidden}">
             <div ng-show="!quickbar.lexeme.hidden" ng-click="quickBarTile(quickbar.lexeme);">
-              {{ quickbar.lexeme.lexeme | limitTo: titleLimit }}
+              {{ ::quickbar.lexeme.lexeme | limitTo: titleLimit }}
               <br />
-              <img  ng-src="{{quickbar.lexeme.symbol.image | localImage }}" ng-if="quickbar.lexeme.symbol.image" style="width:40px;height:40px">
+              <img ng-src="{{::quickbar.lexeme.symbol.image | localImage }}" ng-if="quickbar.lexeme.symbol.image" style="width:40px;height:40px">
             </div>
           </div>
 
           <div class="regulars" ng-class="{'hide-tile': quickbar.lexeme2.hidden}">
             <div ng-show="!quickbar.lexeme2.hidden" ng-click="quickBarTile(quickbar.lexeme2);">
-              {{ quickbar.lexeme2.lexeme | limitTo: titleLimit }}
+              {{ ::quickbar.lexeme2.lexeme | limitTo: titleLimit }}
               <br />
-              <img ng-src="{{quickbar.lexeme2.symbol.image | localImage }}" ng-if="quickbar.lexeme2.symbol.image" style="width:40px;height:40px">
+              <img ng-src="{{::quickbar.lexeme2.symbol.image | localImage }}" ng-if="quickbar.lexeme2.symbol.image" style="width:40px;height:40px">
             </div>
           </div>
 
           <div class="regulars" ng-class="{'hide-tile': quickbar.lexeme3.hidden}">
             <div ng-show="!quickbar.lexeme3.hidden" ng-click="quickBarTile(quickbar.lexeme3);">
-              {{ quickbar.lexeme3.lexeme | limitTo: titleLimit }}
+              {{ ::quickbar.lexeme3.lexeme | limitTo: titleLimit }}
               <br />
-              <img ng-src = "{{quickbar.lexeme3.symbol.image | localImage }}" ng-if="quickbar.lexeme3.symbol.image" style="width:40px;height:40px">
+              <img ng-src="{{::quickbar.lexeme3.symbol.image | localImage }}" ng-if="quickbar.lexeme3.symbol.image" style="width:40px;height:40px">
             </div>
           </div>
 
           <div class="regulars" ng-class="{'hide-tile': quickbar.lexeme4.hidden}">
             <div ng-show="!quickbar.lexeme4.hidden" ng-click="quickBarTile(quickbar.lexeme4);">
-              {{ quickbar.lexeme4.lexeme | limitTo: titleLimit }}
-              <img ng-src="{{quickbar.lexeme4.symbol.image | localImage }}" ng-if="quickbar.lexeme4.symbol.image" style="width:40px;height:40px">
+              {{ ::quickbar.lexeme4.lexeme | limitTo: titleLimit }}
+              <img ng-src="{{::quickbar.lexeme4.symbol.image | localImage }}" ng-if="quickbar.lexeme4.symbol.image" style="width:40px;height:40px">
             </div>
           </div>
         </div>
@@ -94,35 +94,35 @@
           <div class="regulars" ng-click="hideRegular(quickbar.lexeme.pk);" ng-class="{'item-dark': quickbar.lexeme.hidden}">
             <span class="fa fa-eye-slash item-eye" aria-hidden="true" ng-class="{'eye-red': !quickbar.lexeme.hidden}" ng-if="!quickbar.lexeme.hidden"></span>
             <span class="fa fa-eye item-eye" aria-hidden="true" ng-class="{'eye-green': quickbar.lexeme.hidden}" ng-if="quickbar.lexeme.hidden"></span>
-            {{ quickbar.lexeme.lexeme | limitTo: titleLimit }}
+            {{ ::quickbar.lexeme.lexeme | limitTo: titleLimit }}
             <br />
-            <img ng-src="{{quickbar.lexeme.symbol.image | localImage }}" style="width:40px;height:40px">
+            <img ng-src="{{::quickbar.lexeme.symbol.image | localImage }}" style="width:40px;height:40px">
           </div>
 
           <div class="regulars"
           ng-click="hideRegular(quickbar.lexeme2.pk);" ng-class="{'item-dark': quickbar.lexeme2.hidden}">
             <span class="fa fa-eye-slash item-eye" aria-hidden="true" ng-class="{'eye-red': !quickbar.lexeme2.hidden}" ng-if="!quickbar.lexeme2.hidden"></span>
             <span class="fa fa-eye item-eye" aria-hidden="true" ng-class="{'eye-green': quickbar.lexeme2.hidden}" ng-if="quickbar.lexeme2.hidden"></span>
-          {{ quickbar.lexeme2.lexeme | limitTo: titleLimit }}
+          {{ ::quickbar.lexeme2.lexeme | limitTo: titleLimit }}
           <br />
-          <img ng-src="{{quickbar.lexeme2.symbol.image | localImage }}" ng-if="quickbar.lexeme2.symbol.image" style="width:40px;height:40px">
+          <img ng-src="{{::quickbar.lexeme2.symbol.image | localImage }}" ng-if="quickbar.lexeme2.symbol.image" style="width:40px;height:40px">
         </div>
 
         <div class="regulars" ng-click="hideRegular(quickbar.lexeme3.pk);" ng-class="{'item-dark': quickbar.lexeme3.hidden}">
           <span class="fa fa-eye-slash item-eye" aria-hidden="true" ng-class="{'eye-red': !quickbar.lexeme3.hidden}" ng-if="!quickbar.lexeme3.hidden"></span>
           <span class="fa fa-eye item-eye" aria-hidden="true" ng-class="{'eye-green': quickbar.lexeme3.hidden}" ng-if="quickbar.lexeme3.hidden"></span>
-          {{ quickbar.lexeme3.lexeme | limitTo: titleLimit }}
+          {{ ::quickbar.lexeme3.lexeme | limitTo: titleLimit }}
           <br />
-          <img ng-src = "{{quickbar.lexeme3.symbol.image | localImage }}" ng-if="quickbar.lexeme3.symbol.image" style="width:40px;height:40px">
+          <img ng-src = "{{::quickbar.lexeme3.symbol.image | localImage }}" ng-if="quickbar.lexeme3.symbol.image" style="width:40px;height:40px">
         </div>
 
         <div class="regulars"
         ng-click="hideRegular(quickbar.lexeme4.pk);" ng-class="{'item-dark': quickbar.lexeme4.hidden}">
           <span class="fa fa-eye-slash item-eye" aria-hidden="true" ng-class="{'eye-red': !quickbar.lexeme4.hidden}" ng-if="!quickbar.lexeme4.hidden"></span>
           <span class="fa fa-eye item-eye" aria-hidden="true" ng-class="{'eye-green': quickbar.lexeme4.hidden}" ng-if="quickbar.lexeme4.hidden"></span>
-        {{ quickbar.lexeme4.lexeme | limitTo: titleLimit }}
+        {{ ::quickbar.lexeme4.lexeme | limitTo: titleLimit }}
         <br />
-        <img ng-src="{{quickbar.lexeme4.symbol.image | localImage }}" ng-if="quickbar.lexeme4.symbol.image" style="width:40px;height:40px">
+        <img ng-src="{{::quickbar.lexeme4.symbol.image | localImage }}" ng-if="quickbar.lexeme4.symbol.image" style="width:40px;height:40px">
       </div>
     </div>
 
@@ -132,7 +132,7 @@
     <div class="word-builder">
       <img src="img/AAC_assets/left-caret.png" style="position:absolute;float:left;top:45px;left:92px;"/>
       <div class="word-builder-input" style="margin-left:-15px">
-        <div class="tile" ng-repeat="symbol in selectedTiles" ng-click="clickTile(board.symbols[col+row]);">
+        <div class="tile" ng-repeat="symbol in selectedTiles track by $index" ng-click="clickTile(board.symbols[col+row]);">
           <p ng-bind="symbol.label? (symbol.label | charLimit: titleLimit) : (symbol.word | charLimit: titleLimit)" class="tile-words"></p>
           <img src="{{symbol.symbol.image | localImage }}" ng-if="symbol.symbol.image" style="width:40px;height:40px">
         </div>
@@ -146,8 +146,8 @@
 
     <div class="col col-60" id="tile-section">
       <div class="tile-section-border">
-        <span ng-repeat="row in rows">
-          <div class="tile" ng-repeat="col in columns" ng-click="clickTile(board.symbols[col+row]);" ng-class="{lightYellow: board.symbols[col+row].word_class.indexOf('pronoun') > -1, 'hide-tile': board.symbols[col+row].hidden};" ng-if="selectedBtn2">
+        <span ng-repeat="row in rows track by $index">
+          <div class="tile" ng-repeat="col in columns track by $index" ng-click="clickTile(board.symbols[col+row]);" ng-class="{lightYellow: board.symbols[col+row].word_class.indexOf('pronoun') > -1, 'hide-tile': board.symbols[col+row].hidden};" ng-if="selectedBtn2">
             <span ng-show="filled_tiles.indexOf(col+row)!=-1 && !board.symbols[col+row].hidden" ng-click="clickTile(board.symbols[col+row]);">
               <p ng-bind="board.symbols[col+row].label? (board.symbols[col+row].label | charLimit: titleLimit) : (board.symbols[col+row].word | charLimit: titleLimit)"
                  class="tile-words"></p>
@@ -170,14 +170,14 @@
     </div>
 
     <div class="col col-40" id="board-section">
-      <div class="boards" ng-if="selectedBtn2" ng-click="chosenBoard($index);" ng-repeat="userBoard in userBoards | sliceArr:start:end" ng-class="{'activated-board': selectedBoardIndex == userBoard.board.pk, 'hide-tile': userBoard.board.hidden}">
+      <div class="boards" ng-if="selectedBtn2" ng-click="chosenBoard($index);" ng-repeat="userBoard in userBoards | sliceArr:start:end track by $index" ng-class="{'activated-board': selectedBoardIndex == userBoard.board.pk, 'hide-tile': userBoard.board.hidden}">
         <div ng-if="!userBoard.board.hidden">
           <p class="tile-words" ng-model="titleLimit">{{userBoard.board.title | charLimit: titleLimit}}</p>
           <img ng-if="userBoard.board.image" ng-src="{{userBoard.board.image | localImage }}" alt="{{userBoard.board.title}}" \>
         </div>
       </div>
 
-      <div class="boards" ng-repeat="userBoard in userBoards | sliceArr:start:end" ng-click="hideUserBoard(userBoard.board.pk);" ng-class="{'item-dark': userBoard.board.hidden}" ng-if="!selectedBtn2">
+      <div class="boards" ng-repeat="userBoard in userBoards | sliceArr:start:end track by $index" ng-click="hideUserBoard(userBoard.board.pk);" ng-class="{'item-dark': userBoard.board.hidden}" ng-if="!selectedBtn2">
         <span class="fa fa-eye-slash item-eye" aria-hidden="true" ng-class="{'eye-red': !userBoard.board.hidden}" ng-if="!userBoard.board.hidden"></span>
         <span class="fa fa-eye item-eye" aria-hidden="true" ng-class="{'eye-green': userBoard.board.hidden}" ng-if="userBoard.board.hidden"></span>
 
