--- a/aac-ionic/scss/style.scss
+++ b/aac-ionic/scss/style.scss
@@ -15,6 +15,16 @@
     background-color: #589317 !important;
 }
 
+.upload-bg{
+    background-color: #3e5ba7;
+}
+
+.settings-icon-format{
+    font-size: 27px;
+    color: white;
+}
+
+
 .cancel {
     color: #9b9b9b;
     border: 3px solid #9b9b9b;
