Finish local Analytics.

--- a/aac-ionic/www/templates/settings.html
+++ b/aac-ionic/www/templates/settings.html
@@ -279,7 +279,7 @@
 	<div ng-include src="'templates/message.html'"></div>
 
 	<div class="settings-box">
-		<p>Download board.</p>
+		<p>Download board</p>
 		<br />
 		<button class="custom-button button-block" ng-click="downloadBoard()">Download</button>
 	</div>
@@ -347,7 +347,7 @@
 		<div ng-include src="'templates/message.html'"></div>
 
 		<div class="settings-box">
-			<p>Upload local analytics into the Google Analytic account.</p>
+			<p>Upload local analytics into the Google Analytic account</p>
 			<br />
 			<button type="submit" class="custom-button button-block">Upload</button>
 		</div>
