--- a/aac-ionic/www/templates/settings.html
+++ b/aac-ionic/www/templates/settings.html
@@ -91,7 +91,7 @@
 	<ion-item ng-click="panel(11, 'download')" class="panels" ng-class="{active: step == 11}">
 		<div class="avatar-icon-placeholder upload-bg text-center">
 			<i class="ion-ios-download-outline settings-icon-format"></i>
-		</div>Download board
+		</div>Download boards
 		<span class="item-note"><i class="icon ion-chevron-right"></i></span>
 	</ion-item>
 
@@ -279,7 +279,7 @@
 	<div ng-include src="'templates/message.html'"></div>
 
 	<div class="settings-box">
-		<p>Download board</p>
+		<p>Download boards</p>
 		<br />
 		<button class="custom-button button-block" ng-click="downloadBoard()">Download</button>
 	</div>
