Changed settings name

--- a/aac-ionic/www/templates/settings.html
+++ b/aac-ionic/www/templates/settings.html
@@ -84,7 +84,7 @@
 	<ion-item ng-click="panel(7)" class="panels" ng-class="{active: step == 7}">
 		<div class="avatar-icon-placeholder upload-bg text-center">
 			<i class="ion-upload settings-icon-format"></i>
-		</div>Upload Local Events
+		</div>Upload Local Analytics
 		<span class="item-note"><i class="icon ion-chevron-right"></i></span>
 	</ion-item>
 
